fix some spacing w/ footer, minor newsletter redesign

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,6 @@
 }
 
 .active-nav {
-  background-color: black;
+  background-color: #2563eb; /* Tailwind blue-600 */
   color: white;
 }
